--- a/package.json
+++ b/package.json
@@ -7,15 +7,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "pack": "rm ./*.tgz && npm pack"
   },
   "devDependencies": {
     "@types/node": "^22.9.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
     "vitest": "^2.1.5"
-  },
-  "dependencies": {
-    "canvas-gleam": "file:../canvas_gleam/canvas-gleam-1.0.0.tgz"
   }
 }
