--- a/canvas-render/tsconfig.json
+++ b/canvas-render/tsconfig.json
@@ -8,19 +8,22 @@
         "skipLibCheck": true,
         /* Bundler mode */
         "moduleResolution": "Bundler",
-        "allowImportingTsExtensions": true,
+        "allowImportingTsExtensions": false,
         "isolatedModules": true,
         "moduleDetection": "force",
         "esModuleInterop": true,
         "declaration": true,
+        /*
         "declarationDir": "./dist/lib",
-        "emitDeclarationOnly": true,
+        */
+        "emitDeclarationOnly": false,
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
-        "noUncheckedSideEffectImports": true
+        "noUncheckedSideEffectImports": true,
+        "outDir": "dist"
     },
-    "include": ["lib/**/*.ts"]
+    "include": ["lib/**/*.ts", "./index.ts"]
 }
