--- a/canvas-render/package.json
+++ b/canvas-render/package.json
@@ -16,6 +16,7 @@
     },
     "devDependencies": {
         "@types/node": "^22.9.0",
+        "jsdom": "^27.0.1",
         "typescript": "~5.6.2",
         "vite": "^5.4.10",
         "vite-plugin-dts": "^4.3.0",
