--- a/canvas-render/package.json
+++ b/canvas-render/package.json
@@ -12,10 +12,12 @@
         "dev": "vite",
         "build": "rm -rf ./dist && tsc",
         "preview": "vite preview",
-        "test": "vitest"
+        "test": "vitest",
+        "test-debug": "vitest --inspect-brk --no-file-parallelism"
     },
     "devDependencies": {
         "@types/node": "^22.9.0",
+        "canvas": "^3.2.0",
         "jsdom": "^27.0.1",
         "typescript": "~5.6.2",
         "vite": "^5.4.10",
