--- a/canvas-render/package.json
+++ b/canvas-render/package.json
@@ -16,10 +16,14 @@
         "test-debug": "vitest --inspect-brk --no-file-parallelism"
     },
     "devDependencies": {
+        "@eslint/js": "^9.39.1",
         "@types/node": "^22.9.0",
         "canvas": "^3.2.0",
+        "eslint": "^9.39.1",
+        "eslint-config-prettier": "^10.1.8",
         "jsdom": "^27.0.1",
         "typescript": "~5.6.2",
+        "typescript-eslint": "^8.49.0",
         "vite": "^5.4.10",
         "vite-plugin-dts": "^4.3.0",
         "vitest": "^2.1.5"
