--- a/canvas-render/tsconfig.json
+++ b/canvas-render/tsconfig.json
@@ -23,6 +23,7 @@
         "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true,
+        "noImplicitAny": true,
         "outDir": "dist"
     },
     "include": ["lib/**/*.ts", "./index.ts"]
