--- a/canvas-render/package.json
+++ b/canvas-render/package.json
@@ -17,6 +17,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.39.1",
+        "@trivago/prettier-plugin-sort-imports": "^6.0.0",
         "@types/node": "^22.9.0",
         "canvas": "^3.2.0",
         "eslint": "^9.39.1",
