--- a/canvas-render/package.json
+++ b/canvas-render/package.json
@@ -28,5 +28,8 @@
         "vite": "^5.4.10",
         "vite-plugin-dts": "^4.3.0",
         "vitest": "^2.1.5"
+    },
+    "dependencies": {
+        "uuid": "^13.0.0"
     }
 }
